Updated site generation

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -153,7 +153,7 @@ import '../styles/global.css';
 
       customElements.define("lazy-load", LazyLoad);
     </script>
-        <Seo seo={{ title: "EcoBuilder", description: "Page description", keywords: "", canonical: "", image: '', type: "website", themeColor: "#ffffff"}} />
+        <Seo seo={{ title: "EcoBuilder", description: "Page description", keywords: "", canonical: "https://giitest-1738234086707.netlify.app/", image: 'https://giitest-1738234086707.netlify.app', type: "website", themeColor: "#ffffff"}} />
 		<meta charset="utf-8" />
 		<link rel="icon" type="image/x-icon" href=/favicons/1738233917649_Group.ico /> 
 		<!-- <link
